--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4Conn – Conexão Inteligente Entre Pessoas e Soluções</title>
+  <title>APP-Site – Conexão Inteligente Entre Pessoas e Soluções</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -23,7 +23,7 @@
 
   <!-- HEADER -->
   <header class="flex justify-between items-center px-8 py-6 bg-gray-900/80 backdrop-blur-xl border-b border-gray-800">
-    <h1 class="text-2xl font-bold tracking-tight">4Conn</h1>
+    <h1 class="text-2xl font-bold tracking-tight">App-Site</h1>
     <nav class="space-x-6 text-gray-300">
       <a href="#sobre" class="hover:text-white transition">Sobre</a>
       <a href="#beneficios" class="hover:text-white transition">Benefícios</a>
@@ -35,17 +35,16 @@
   <!-- HERO -->
   <section class="py-32 text-center bg-gradient-to-br from-purple-600 via-blue-600 to-blue-800">
     <h2 class="text-5xl font-extrabold mb-6 tracking-tight">
-      Conectando Necessidades a Profissionais em Segundos.
+      App para soluções inovadoras em Segundos.
     </h2>
     <p class="text-xl max-w-2xl mx-auto text-gray-200">
-      O 4Conn é a plataforma inteligente que une pessoas e serviços na hora certa,
-      com rapidez, precisão e simplicidade — tudo em um único app.
+      O APP-site Voce encontra soluções inovadores com rapidez, precisão e simplicidade — tudo em um único app.
     </p>
 
     <div class="mt-10">
       <a href="#sobre"
         class="bg-white text-gray-900 px-10 py-4 rounded-xl text-lg font-semibold hover:bg-gray-200 transition">
-        Conhecer o 4Conn
+        Conhecer o App-site
       </a>
     </div>
   </section>
@@ -55,10 +54,8 @@
     <h3 class="text-3xl font-bold mb-8 text-center">O que é o 4Conn?</h3>
 
     <p class="text-gray-300 text-lg leading-relaxed text-center max-w-3xl mx-auto">
-      O 4Conn é um sistema moderno de conexão entre oferta e demanda
-      de serviços. Aqui, usuários encontram rapidamente o profissional ideal
-      para resolver qualquer necessidade — desde serviços técnicos até atendimentos
-      especializados — tudo com segurança, agilidade e total transparência.
+      O App-site é um sistema moderno de conexão Inovadoras. Aqui, o usuario encontram rapidamente a solução ideal
+      para resolver qualquer que seja sua necessidade com segurança, agilidade e total transparência.
     </p>
   </section>
 
@@ -72,21 +69,21 @@
         <div class="p-6 bg-gray-800 rounded-xl shadow-xl hover:scale-105 transition-transform">
           <h4 class="text-xl font-bold mb-3">⏱ Agilidade</h4>
           <p class="text-gray-400">
-            Solicite, encontre e contrate profissionais em poucos segundos.
+            Confie no processo e colha os resultados.
           </p>
         </div>
 
         <div class="p-6 bg-gray-800 rounded-xl shadow-xl hover:scale-105 transition-transform">
           <h4 class="text-xl font-bold mb-3">🔒 Segurança</h4>
           <p class="text-gray-400">
-            Plataforma confiável, com validação profissional e comunicação segura.
+            Plataforma confiável e comunicação segura.
           </p>
         </div>
 
         <div class="p-6 bg-gray-800 rounded-xl shadow-xl hover:scale-105 transition-transform">
           <h4 class="text-xl font-bold mb-3">📍 Conexão Inteligente</h4>
           <p class="text-gray-400">
-            Geolocalização precisa para encontrar o profissional mais próximo.
+            Geolocalização precisa para te manter sempre atualizado.
           </p>
         </div>
 
@@ -101,16 +98,16 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
 
       <div class="p-8 bg-gray-800 rounded-xl shadow-lg">
-        <h4 class="text-xl font-bold mb-2">1 — Você solicita</h4>
+        <h4 class="text-xl font-bold mb-2">1 — Conecta</h4>
         <p class="text-gray-400">
-          Informe o que precisa e deixe que o sistema encontre profissionais ideais.
+          Conecte-se para descobrir como o app pode te ajudar
         </p>
       </div>
 
       <div class="p-8 bg-gray-800 rounded-xl shadow-lg">
-        <h4 class="text-xl font-bold mb-2">2 — Profissionais respondem</h4>
+        <h4 class="text-xl font-bold mb-2">2 — Planos de Assinatura</h4>
         <p class="text-gray-400">
-          Receba propostas e escolha a melhor opção com base em avaliações.
+          escolha o plano que melhor se adequa as suas necessidades do plano gratis ao Profissional
         </p>
       </div>
 
@@ -128,7 +125,7 @@
   <section id="contato" class="text-center max-w-4xl mx-auto py-24 px-6">
     <h3 class="text-3xl font-bold mb-6">Fale Conosco</h3>
     <p class="text-gray-300 mb-8">
-      Quer saber mais sobre como o 4Conn pode transformar sua operação?
+      Quer saber mais sobre como o App-site pode transformar sua operação?
     </p>
 
     <a href="mailto:contato@4itlabs.com"
@@ -142,5 +139,6 @@
   </footer>
 
 </body>
+
 
 </html>
