--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- SOBRE -->
   <section id="sobre" class="max-w-5xl mx-auto py-24 px-6">
-    <h3 class="text-3xl font-bold mb-8 text-center">O que é o 4Conn?</h3>
+    <h3 class="text-3xl font-bold mb-8 text-center">O que é o App-Site?</h3>
 
     <p class="text-gray-300 text-lg leading-relaxed text-center max-w-3xl mx-auto">
       O App-site é um sistema moderno de conexão Inovadoras. Aqui, o usuario encontram rapidamente a solução ideal
@@ -142,3 +142,4 @@
 
 
 </html>
+
